# alfred_crates

./: Cargo.toml  README.md  info.plist
src/: main.rs
